<resources>
    <string name="app_name">ComputacaoPlugada</string>

    <string name="descricao_card">Os dados são armazenados em computadores e transmitidos como uma série de zeros e uns.
        Como podemos representar palavras e números usando apenas estes dois símbolos?</string>

    <string name="texto_nb_02">Para esta atividade, são necessários cinco cartões. Os cartões devem estar na seguinte ordem: </string>

    <string name="texto_nb_01">Podemos usar estes cartões para representar números binários. Cartas viradas para cima,
        representam o bit 1, viradas para baixo o bit 0.</string>

    <string name="texto_intro_02">As cartas abaixo estão representando o número 9. Aproveite e fique à vontade para
        experimentar outros números…</string>
    <string name="textoFimSobre">Desenvolvido por: \nMatheus Barbosa de Oliveira\nIvonildo Pereira Gomes Neto
        \nTodos os Direitos Reservados \n© 2018</string>

    <string name="text_sobre"><![CDATA[O aplicativo computação plugada, inspirado no livro de Bell, T.; Witten, I. e Fellows,
     M. (2011). “Computer Science Unplugged – Ensinando Ciência da Computação sem o uso do Computador”.
     Tradução de Luciano Porto Barreto, 2011. Disponível em: <http://csunplugged.org/>. Apresenta atividades práticas,
     lúdicas e acessíveis sobre diversos temas da ciência da computação. O mesmo engloba técnicas fáceis para seu uso,
     tornando-se disponível para todos. Sua prática é fácil não só em salas de aula mas também fora, pela sua abordagem
     simples e inteligente, podendo ser fácil administrado por professores e compreendido por crianças. O aplicativo é uma grande inovação para as técnicas de aprendizagem, apresentando temas complexos de uma forma elementar para o conhecimento.]]></string>

    <string name="texto_alert_sem_resposta">Você não completou a atividade, responda todas as perguntas e tente novamente.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="texto_intro_01">Então, você achava que sabia contar? Bem, aqui está uma nova forma de fazer isso!
        Sabia que os computadores utilizam apenas zeros e uns? Tudo o que você vê ou ouve no computador - palavras,
        imagens, números, filmes e até mesmo o som - são armazenados usando apenas estes dois numerais! Estas atividades
        ensinarão como enviar mensagens secretas aos seus amigos usando exatamente o mesmo método que um computador.</string>

    <string name="texto_EMS">Tom está preso no último andar de uma loja. É noite de Natal e ele quer ir para casa com seus
        presentes. O que ele pode fazer? Ele tentou chamar alguém, até mesmo gritar, mas não há ninguém por perto.
        Do outro lado da rua ele pode ver uma pessoa ainda trabalhando em seu computador até tarde da noite.
        Como ele poderia atrair sua atenção? Tom olha em volta para ver o que poderia usar.
        Então, ele tem uma brilhante idéia: utilizar as lâmpadas da árvore de Natal para enviar uma mensagem!
        Ele coletou todas as lâmpadas disponíveis e as conectou aos bocais de forma que pudesse acendê-las ou apagá-las.
        Ele usou um código binário simples, que ele sabia ser de conhecimento da mulher do outro lado da rua.
        Você pode identificar a mensagem enviada por Tom?</string>

    <string name="texto_tnb">Já sabemos que o sistema binário utiliza o zero e o um para representar todos os dados de um computador. \nEntão vamos tentar decifrar os seguintes números codificados:</string>

    <string name="resposta_incorreta">Resposta incorreta</string>

    <string name="texto_CEM01">Os computadores conectados à Internet através de um equipamento conhecido por modem também
        utilizam o sistema binário para enviar mensagens. A única diferença é que eles usam um sinal sonoro ou bip. Um bip
        agudo é utilizado para o um e um bip grave é utilizado para o zero. Estes sinais são transmitidos rapidamente.
        Tão rápido, na verdade, que apenas ouvimos um horrível zumbido contínuo. Se você nunca o ouviu, ouça um modem
        conectar-se à Internet ou tente ligar para uma máquina de fax – as máquinas de fax também usam modems para enviar informação.</string>

    <string name="texto_CEM02">Tente enviar uma mensagem de correio eletrônico com seu nome ao seu amigo. Depois usando o mesmo código que Tom utilizou no exercicio anterior, decifre a resposta do seu amigo.
        Mas facilite as coisas para você e seu amigo, pois vocês não precisam ser tão rápidos quanto um modem de verdade!</string>

    <string name="texto_CA31_01">Você já colocou todos os seus dedos para trabalhar? Pois agora seus dedos podem contar e
        ir muito além do número dez. Não, você não precisa ser de outro planeta! Se utilizar o sistema binário e deixar que cada
        dedo de uma mão represente um dos cartões com pontos (Não esqueça a sequencia 1, 2, 4, 8, 16...),
        então pode contar de zero a 31. Ao total, temos 32 números. (Não se esqueça de que o zero também é um número!)</string>

    <string name="texto_CA31_02">Tente contar sequencialmente utilizando seus dedos. Se o dedo estiver para cima, é um, e, se estiver
        para baixo, é zero. Você pode contar de 0 a 1023 se usar as duas mãos! São 1024 números!</string>

    <string name="texto_CA31_03">Se os dedos dos seus pés forem realmente flexíveis (se você fosse de outro planeta),
        seria possível obter números ainda maiores. Uma mão pode contar até 32 e duas mãos podem contar até 32 × 32 = 1024.</string>

    <string name="texto_tti_01">Os computadores atualmente utilizam o sistema binário para representar informações. Chama-se binário porque utiliza dois dígitos distintos. Também é conhecido como base dois (as pessoas utilizam no dia-a-dia a base 10). Cada zero ou um é chamado de bit (dígito binário). Um bit é normalmente representado na memória principal do computador por um transistor, que pode estar ligado ou desligado, ou um capacitor, que pode estar carregado ou descarregado.</string>
    <string name="texto_tti_02">Quando os dados devem ser transmitidos por uma linha telefônica ou enlace de rádio, tons de alta e baixa freqüência são utilizados para os zeros e uns. Em discos magnéticos (disquetes e discos rígidos) e fitas, os bits são representados pela direção de um campo magnético sobre uma superfície revestida, podendo ser norte-sul ou sul-norte.</string>
    <string name="texto_tti_04">Um único bit não consegue representar muito. Por isso, os bits são utilizados geralmente em grupos de oito, podendo representar números de 0 a 255. Um grupo de oito bits é chamado de byte. A velocidade de um computador depende do número de bits que este pode processar de uma só vez. Por exemplo, um computador de 32 bits pode processar números de 32 bits em uma única operação, ao passo que um computador de 16 bits divide os números de 32 bits em partes menores, o que o torna mais lento.</string>
    <string name="texto_tti_03">CDs de áudio, CD-ROMs e DVDs armazenam bits de forma ótica — a parte da superfície correspondente a um bit reflete ou não a luz.</string>
    <string name="texto_tti_05">Em suma, bits e bytes são tudo que um computador utiliza para armazenar e transmitir números, texto e todas as outras informações. Em algumas das atividades seguintes veremos como outros tipos de informações podem ser representados em um computador.</string>
    <string name="texto_mnb_01">Outra situação interessante dos números binários acontece quando um zero é colocado ao lado direito de
        um número. Se estivermos trabalhando na base 10 (decimal), ao colocarmos um zero ao lado direito de um número, este é
        multiplicado por 10. Por exemplo, 9 torna-se 90, 30 torna-se 300. </string>
    <string name="texto_mnb_02">Cada um dos cartões que utilizamos até agora representa um bit no computador
        (bit é a abreviação do termo inglês binary digit - dígito binário). Dessa forma,
        o código alfabético que utilizamos até então pode ser representando usando apenas cinco cartões, ou bits.
        Entretanto, um computador deve saber se as letras são maiúsculas ou não, e deve também reconhecer dígitos,
        sinais de pontuação e símbolos especiais como $ ou ~.
        \nEntão, quantos bits são necessários para um computador armazenar todos os caracteres? Geralmente são 7 bits que são armazenados
        em um byte (8 bits), com um bit não utilizado.
        \nA maioria dos computadores atualmente utiliza uma representação chamada ASCII (American Standard Code for Information Interchange
        - Código Padrão Americano para Intercâmbio de Informação), que utiliza essa quantidade de bits para representar os caracteres,
        mas alguns países em que se falam outros idiomas precisam utilizar códigos maiores.</string>

    <string name="dicas_intro">1. Presione o cartão para vira-lo;
        \n2. A soma dos pontos dos cartões representam o numero decimal;
        \n3. Os numero binario é representado pela sequencia de zeros e uns;
        \n4. Responda todas as perguntas corretamente para completar a tarefa.</string>

    <string name="dicas_nb">1. Presione o cartão para vira-lo;
        \n2. A soma dos pontos dos cartões representam o numero decimal;
        \n3. Os numero binario é representado pela sequencia de zeros e uns;
        \n4. Decore a posição das cartas, você vai precisar…
        \n5. Responda todas as perguntas corretamente para completar a tarefa.</string>

    <string name="dicas_tnb">1. Os campos devems ser preenchidos com valores decimais;
        \n2. Talvez lembrar a sequencia das cartas te ajude nesse exercicio (16,8,4,2,1);
        \n3. Responda todas as perguntas corretamente para completar a tarefa</string>

    <string name="dicas_ems">1. Os campos devems ser preenchidos com valores decimais;
        \n2. Decifre todos os numeros e ao final traduza a mensagem;
        \n3. Responda todas as perguntas corretamente para completar a tarefa.</string>

    <string name="dicas_cem">1. Digite o seu nome e clique em enviar;
    \n2. Decifre a mensagem enviada pelo seu amigo;
    \n3. Não esqueça da virgula;</string>

    <string name="dicas_ca31">1. Não esqueça a sequencia dos cartões 16, 8, 4, 2, 1...
    \n2. senhorita "Flex" é a mulher da imagem;
    \n3. Responda todas as perguntas corretamente para completar a tarefa.</string>

    <string name="dicas_mnb">1. Responda todas as perguntas corretamente para completar a tarefa.</string>
    <string name="dicas_tti">1. Responda o questionario até o final para obter o Token;
    \n2. Copie e cole o Token correto na caixa de texto para completar a tarefa;</string>


    <string name="sobre_total"><![CDATA[O aplicativo computação plugada, inspirado no livro de Bell, T.; Witten, I. e Fellows,
     M. (2011). “Computer Science Unplugged – Ensinando Ciência da Computação sem o uso do Computador”.
     Tradução de Luciano Porto Barreto, 2011. Disponível em: <http://csunplugged.org/>. Apresenta atividades práticas,
     lúdicas e acessíveis sobre diversos temas da ciência da computação. O mesmo engloba técnicas fáceis para seu uso,
     tornando-se disponível para todos. Sua prática é fácil não só em salas de aula mas também fora, pela sua abordagem
     simples e inteligente, podendo ser fácil administrado por professores e compreendido por crianças.
     O aplicativo é uma grande inovação para as técnicas de aprendizagem, apresentando temas complexos de uma forma
     elementar para o conhecimento.
     \n\nDesenvolvido por: \nMatheus Barbosa de Oliveira\nIvonildo Pereira Gomes Neto
        \nTodos os Direitos Reservados \n© 2018
     ]]></string>


</resources>
