<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fundo"
    android:orientation="vertical"
    tools:context="com.tcc.projeto.appcomputacaoplugada.activitys.DoQueSeTrataTudoIssoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_tti_01" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/flor" />

            <ImageButton
                android:id="@+id/dicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardshape"
                android:src="@drawable/ic_help_outline_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_tti_02" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/dinheiro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_tti_03" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/setastti" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_tti_04" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_tti_05" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/hospital" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Muito obrigado por testar nosso aplicativo... Para finalizar todas as atividades pedimos apenas que responta o questionario, clicando no botão abaixo.
Somente ao finalizar o formulario você recebera o Token que deve copiar e colar no campo abaixo." />

            <Button
                android:id="@+id/formulario"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Ir para formulario" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutTTI"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:theme="@style/EditTextStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textoTraduzidoTTI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o Token do formulario"
                    android:theme="@style/EditTextStyle" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/finalizar"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Finalizar" />

    </LinearLayout>


</ScrollView>

