<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fundo"
    android:orientation="vertical"
    tools:context=".fragments.DeQueSeTrataTudoIssoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="@string/texto_tti_01"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/flor"/>

            <ImageButton
                android:id="@+id/dicasTTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardshape"
                android:src="@drawable/ic_help_outline_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="@string/texto_tti_02"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/dinheiro"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="@string/texto_tti_03"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/setastti"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="@string/texto_tti_04"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="@string/texto_tti_05"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/hospital"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cardshape"
            android:elevation="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:justificationMode="inter_word"
                android:text="Muito obrigado por testar nosso aplicativo... Para finalizar todas as atividades pedimos apenas que responta o questionario, clicando no botão abaixo.
Somente ao finalizar o formulario você recebera o Token que deve copiar e colar no campo abaixo."
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/formulario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Ir para formulario"
                style="@style/ButtonStyle"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutTTI"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:theme="@style/EditTextStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textoTraduzidoTTI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o Token do formulario"
                    android:theme="@style/EditTextStyle" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_finalizarTTI"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Finalizar" />

    </LinearLayout>


</ScrollView>

